--- a/package.json
+++ b/package.json
@@ -1,23 +1,42 @@
 {
   "name": "react-native-num-pad",
   "version": "1.0.0",
-  "main": "index.ts",
+  "description": "A customizable numeric keypad component for React Native applications",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "build": "tsc",
+    "prepare": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "expo": "~52.0.35",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7"
+  "keywords": [
+    "react-native",
+    "numpad",
+    "numeric-keypad",
+    "keyboard",
+    "input",
+    "ios",
+    "android"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yourusername/react-native-num-pad.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/react-native-num-pad/issues"
+  },
+  "homepage": "https://github.com/yourusername/react-native-num-pad#readme",
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-native": ">=0.60.0",
+    "react-native-svg": ">=12.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.0",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": false
 }
